# python-file_converter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  cli.py  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
notebooks/: 01_convert_and_preview.ipynb
src/file_converter/: cli.py
src/file_converter/core/: pipeline.py
src/file_converter/exporters/: csv_exporter.py  parquet_exporter.py
src/file_converter/loaders/: base.py  csv_loader.py  excel_loader.py  json_loader.py  parquet_loader.py  pickle_loader.py
tests/: test_cli_e2e.py  test_cli_paths.py  test_export.py  test_loaders.py  test_pipeline.py
