[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tabular-convert"
version = "0.1.0"
description = "Universal tabular format converter"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "openpyxl",
    "pyarrow"
]

[project.scripts]
convert = "file_converter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]