[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "tabular-convert"
version = "0.1.0"
description = "Universal tabular format converter"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Walery", email = "kontakt@walery.online"}
]
license = {text = "MIT"}

dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "openpyxl>=3.0.1,<3.1.5",
    "pyarrow>=16.0.0,<19.0.0",
    "tqdm>=4.64.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "pandas-stubs>=2.0.0",
    "types-openpyxl>=3.1.5",
    "types-tqdm",
    "pip-audit>=2.6.0"
]

[project.scripts]
convert = "file_converter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
